# jackbox-bot

./: README.md  main.py  nodemon.json  package.json  pyproject.toml  tsconfig.json  username.txt
src/: index.ts
