[tool.poetry]
name = "jackbox-bot"
version = "0.1.0"
description = ""
authors = ["StarStudio <charlottewiltshire27@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
